--- a/Lychee.Stocks/Lychee.Stocks.Domain/packages.config
+++ b/Lychee.Stocks/Lychee.Stocks.Domain/packages.config
@@ -7,7 +7,7 @@
   <package id="Lychee.Domain" version="1.2.1" targetFramework="net472" />
   <package id="Lychee.Entities" version="1.0.0" targetFramework="net472" />
   <package id="Lychee.HttpClientService" version="1.4.0" targetFramework="net472" />
-  <package id="Lychee.Infrastructure" version="1.4.2" targetFramework="net472" />
+  <package id="Lychee.Infrastructure" version="1.7.0" targetFramework="net472" />
   <package id="Lychee.Models" version="1.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="2.0.2" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net472" />
@@ -85,4 +85,5 @@
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net472" />
   <package id="Utf8Json" version="1.3.7" targetFramework="net472" />
   <package id="ValueInjecter" version="3.2.0" targetFramework="net472" />
+  <package id="Z.Expressions.Eval" version="4.0.9" targetFramework="net472" />
 </packages>
