-Stocks with steep down -Refactor news partial view

--- a/Lychee.Stocks/Lychee.Stocks/Lychee.Stocks.csproj
+++ b/Lychee.Stocks/Lychee.Stocks/Lychee.Stocks.csproj
@@ -379,8 +379,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\NewsHelper.cs" />
     <Compile Include="Helpers\StockUIHelper.cs" />
     <Compile Include="Models\LastDataUpdateViewModel.cs" />
+    <Compile Include="Models\News\NewsViewModel.cs" />
     <Compile Include="Models\Reports\DownTrendReportViewModel.cs" />
     <Compile Include="Models\Reports\MarketStatusViewModel.cs" />
     <Compile Include="Models\Reports\TrendReportBaseClass.cs" />
@@ -463,6 +465,7 @@
     <Content Include="Views\Shared\_ScreenerResponseOversold.cshtml" />
     <Content Include="Views\Home\Oversold.cshtml" />
     <Content Include="Views\Watchlist\Index.cshtml" />
+    <Content Include="Views\Home\SteepDown.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
