--- a/Lychee.Stocks/Lychee.Stocks/Lychee.Stocks.csproj
+++ b/Lychee.Stocks/Lychee.Stocks/Lychee.Stocks.csproj
@@ -65,10 +65,10 @@
       <HintPath>..\packages\Lychee.CommonHelper.2.0.0\lib\net40\Lychee.CommonHelper.dll</HintPath>
     </Reference>
     <Reference Include="Lychee.Domain, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Lychee.Domain.1.2.1\lib\net40\Lychee.Domain.dll</HintPath>
+      <HintPath>..\packages\Lychee.Domain.1.3.0\lib\net40\Lychee.Domain.dll</HintPath>
     </Reference>
     <Reference Include="Lychee.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Lychee.Entities.1.0.0\lib\net40\Lychee.Entities.dll</HintPath>
+      <HintPath>..\packages\Lychee.Entities.1.1.1\lib\net40\Lychee.Entities.dll</HintPath>
     </Reference>
     <Reference Include="Lychee.Infrastructure, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Lychee.Infrastructure.1.7.0\lib\net40\Lychee.Infrastructure.dll</HintPath>
@@ -468,6 +468,8 @@
     <Content Include="Views\Home\SteepDown.cshtml" />
     <Content Include="Views\Home\_MACD.cshtml" />
     <Content Include="Views\Home\FiftyTwoWeekLow.cshtml" />
+    <Content Include="Views\Stock\List.cshtml" />
+    <Content Include="Views\Stock\CreateStock.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
