-Fixed GetAllActiveStockPriceRealTime to start with 0 index -Remove noise from dashboard (stocks  < 100 trades)

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Lychee.Stocks/Lychee.Stocks/obj/
 Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi.Test/obj/
 Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi/obj/
 Lychee.Stocks/Lychee.Stocks.Domain/obj/
+/Lychee.Stocks/Lychee.Stocks.Common/obj/Debug
