--- a/Lychee.Stocks/Lychee.Stocks.Domain/Lychee.Stocks.Domain.csproj
+++ b/Lychee.Stocks/Lychee.Stocks.Domain/Lychee.Stocks.Domain.csproj
@@ -317,6 +317,7 @@
     <Compile Include="Models\CandleStick.cs" />
     <Compile Include="Models\ReasonScore.cs" />
     <Compile Include="Models\ShouldIBuyStockModel.cs" />
+    <Compile Include="Models\StockTradeAverage.cs" />
     <Compile Include="Repositories\WatchListRepository.cs" />
     <Compile Include="Services\CandleStickAnalyzer.cs" />
     <Compile Include="Services\InvestagramsApiCachedService.cs" />
@@ -341,6 +342,10 @@
     <ProjectReference Include="..\..\Lychee.Stocks.InvestagramsApi\Lychee.Stocks.InvestagramsApi\Lychee.Stocks.InvestagramsApi.csproj">
       <Project>{273498e1-0613-4baa-927f-eee07b2b839a}</Project>
       <Name>Lychee.Stocks.InvestagramsApi</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Lychee.Stocks.Common\Lychee.Stocks.Common.csproj">
+      <Project>{c8481e54-3798-4baf-b53a-5494ffe0147a}</Project>
+      <Name>Lychee.Stocks.Common</Name>
     </ProjectReference>
     <ProjectReference Include="..\Lychee.Stocks.Entities\Lychee.Stocks.Entities.csproj">
       <Project>{ab216ec2-7a03-4b97-a8d8-f3d7b47d8850}</Project>
