-add last price to watchlist -Not clearing hammer report fix

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi.Test/obj/
 Lychee.Stocks.InvestagramsApi/Lychee.Stocks.InvestagramsApi/obj/
 Lychee.Stocks/Lychee.Stocks.Domain/obj/
 /Lychee.Stocks/Lychee.Stocks.Common/obj/Debug
+Lychee.Stocks/Lychee.Stocks.Entities/bin/
+Lychee.Stocks/Lychee.Stocks.Common/bin/
+Lychee.Stocks/Lychee.Stocks.Test/obj/
+Lychee.Stocks/Lychee.Stocks.Entities/obj/
