--- a/Lychee.Stocks/Lychee.Stocks.Entities/Lychee.Stocks.Entities.csproj
+++ b/Lychee.Stocks/Lychee.Stocks.Entities/Lychee.Stocks.Entities.csproj
@@ -54,14 +54,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BlockSaleStock.cs" />
+    <Compile Include="Event.cs" />
     <Compile Include="Prediction.cs" />
     <Compile Include="Stock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StockContext.cs" />
     <Compile Include="StockHistory.cs" />
     <Compile Include="StockTrendReportModel.cs" />
-    <Compile Include="SuspendedStock.cs" />
     <Compile Include="TechnicalAnalysis.cs" />
     <Compile Include="Watchlist.cs" />
     <Compile Include="WatchListGroup.cs" />
