--- a/Lychee.Stocks/Lychee.Stocks/Lychee.Stocks.csproj
+++ b/Lychee.Stocks/Lychee.Stocks/Lychee.Stocks.csproj
@@ -61,12 +61,6 @@
     <Reference Include="Lychee.Caching, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Lychee.Caching.1.0.1\lib\net40\Lychee.Caching.dll</HintPath>
     </Reference>
-    <Reference Include="Lychee.CommonHelper, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Lychee.CommonHelper.2.0.0\lib\net40\Lychee.CommonHelper.dll</HintPath>
-    </Reference>
-    <Reference Include="Lychee.Domain, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Lychee.Domain.1.3.1\lib\net40\Lychee.Domain.dll</HintPath>
-    </Reference>
     <Reference Include="Lychee.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Lychee.Entities.1.1.1\lib\net40\Lychee.Entities.dll</HintPath>
     </Reference>
@@ -387,6 +381,7 @@
     <Compile Include="Models\Reports\MarketStatusViewModel.cs" />
     <Compile Include="Models\Reports\TrendReportBaseClass.cs" />
     <Compile Include="Models\Reports\UpTrendReportViewModel.cs" />
+    <Compile Include="Models\Stocks\GreenVolumeViewModel.cs" />
     <Compile Include="Models\Stocks\TrendingStockViewModel.cs" />
     <Compile Include="Models\Watchlist\WatchlistViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -497,6 +492,14 @@
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Lychee.CommonHelper\Lychee.CommonHelper\Lychee.CommonHelper\Lychee.CommonHelper.csproj">
+      <Project>{e5d326ba-6be1-4763-aaed-dd95d8db1f16}</Project>
+      <Name>Lychee.CommonHelper</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\Lychee.Domain\Lychee.Domain\Lychee.Domain\Lychee.Domain.csproj">
+      <Project>{01b8d458-8f85-48ed-bfed-f9d3c694aa8a}</Project>
+      <Name>Lychee.Domain</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Lychee.Stocks.InvestagramsApi\Lychee.Stocks.InvestagramsApi\Lychee.Stocks.InvestagramsApi.csproj">
       <Project>{273498e1-0613-4baa-927f-eee07b2b839a}</Project>
       <Name>Lychee.Stocks.InvestagramsApi</Name>
